--- a/frontend-angular-workspace/projects/end-user/src/app/components/calendar/calendar-box.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/calendar/calendar-box.component.html
@@ -164,6 +164,13 @@
         </div>
       </div>
     </div>
+
+    <!--Message-->
+    <div
+      *ngIf="calendarDynamicService.message"
+    >
+      {{calendarDynamicService.message}}
+    </div>
   </div>
 </div>
 
