--- a/frontend-angular-workspace/projects/amber-core/src/lib/components/icon/icon.component.html
+++ b/frontend-angular-workspace/projects/amber-core/src/lib/components/icon/icon.component.html
@@ -3,14 +3,12 @@
   [style.width]="size"
   [style.height]="size"
   class="
-    cursor-pointer
     bg-cover
     bg-center
     outline-none
-    hover:ring-1
-    active:ring-2
     rounded
   "
+  [class]="disabled ? ['cursor-not-allowed'] : ['cursor-pointer', 'hover:ring-1', 'active:ring-2']"
   [attr.tabindex]="disableTabIndex ? '' : 0"
 >
 </div>
