--- a/frontend-angular-workspace/projects/end-user/src/app/components/table/table-master/table-master-for-sale.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/table/table-master/table-master-for-sale.component.html
@@ -42,105 +42,11 @@
     <ng-container
       *ngFor="let row of rows; index as index"
     >
-      <!--Image-->
-      <div
-        class="
-          p-1
-          flex
-          justify-center
-          items-center
-          border-b-2
-        "
-      >
-        <div
-          [style]="{backgroundImage: row.imageUrl | urlWrap}"
-          class="
-            bg-center
-            bg-cover
-            w-60
-            h-40
-          "
-        ></div>
-      </div>
-      <!--Bike Name-->
-      <div
-        class="
-          p-1
-          flex
-          justify-center
-          items-center
-          border-b-2
-        "
-      >
-        {{row.bikeName}}
-      </div>
-      <!--Price-->
-      <div
-        class="
-          p-1
-          flex
-          justify-center
-          items-center
-          border-b-2
-        "
-      >
-        {{row.priceDisplay}}
-      </div>
-      <!--Amount-->
-      <div
-        class="
-          p-1
-          flex
-          justify-center
-          items-center
-          gap-2
-          border-b-2
-        "
-      >
-        <amber-icon
-          backgroundImageUrl="assets/minus.svg"
-          size="1em"
-          (click)="row.decreaseAmount()"
-        ></amber-icon>
-        <input
-          [(ngModel)]="row.amount"
-          type="number"
-          class="
-            text-center
-            w-20
-            outline-none
-            border-2
-            rounded
-          "
-        />
-        <amber-icon
-          backgroundImageUrl="assets/plus.svg"
-          size="1em"
-          (click)="row.increaseAmount()"
-        ></amber-icon>
-      </div>
-      <!--Total-->
-      <div
-        class="
-          p-1
-          flex
-          justify-center
-          items-center
-          border-b-2
-        "
-      >
-        <div>
-          {{row.total}} USD
-        </div>
-        <amber-icon
-          class="
-            ml-2
-            mb-0.5
-          "
-          backgroundImageUrl="assets/close.svg"
-          size="1em"
-        ></amber-icon>
-      </div>
+      <app-table-row-for-sale
+        [itemStoreName]="itemStoreName"
+        [index]="index"
+        [row]="row"
+      ></app-table-row-for-sale>
     </ng-container>
     <!--Total-->
     <ng-container>
