--- a/frontend-angular-workspace/projects/end-user/src/app/components/table/table-row/table-row-for-sale.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/table/table-row/table-row-for-sale.component.html
@@ -1,60 +1,121 @@
-<ng-container
-  *ngFor="let row of rows"
+<!--Image-->
+<div
+  class="
+    p-1
+    flex
+    justify-center
+    items-center
+    border-b-2
+  "
 >
   <div
+    [style]="{backgroundImage: row.imageUrl | urlWrap}"
     class="
-          p-1
-          flex
-          justify-center
-          items-center
-        "
-  >
-    <div
-      [style]="{backgroundImage: row.imageUrl | urlWrap}"
-      class="
-            bg-center
-            bg-cover
-            w-60
-            h-40
-          "
-    ></div>
-  </div>
-  <div>
-    {{row.bikeName}}
-  </div>
-  <div>
-    {{row.priceDisplay}}
-  </div>
-  <div
+      bg-center
+      bg-cover
+      w-60
+      h-40
+    "
+  ></div>
+</div>
+<!--Bike Name-->
+<div
+  class="
+    p-1
+    flex
+    justify-center
+    items-center
+    border-b-2
+  "
+>
+  {{row.bikeName}}
+</div>
+<!--Price-->
+<div
+  class="
+    p-1
+    flex
+    justify-center
+    items-center
+    border-b-2
+  "
+>
+  {{row.priceDisplay}}
+</div>
+<!--Amount-->
+<div
+  class="
+    p-1
+    flex
+    justify-center
+    items-center
+    gap-2
+    border-b-2
+  "
+>
+  <amber-icon
+    backgroundImageUrl="assets/minus.svg"
+    size="1em"
+    (click)="row.decreaseAmount(); updateAmount()"
+  ></amber-icon>
+  <input
+    [(ngModel)]="row.amount"
+    type="number"
     class="
-          p-1
-          flex
-          justify-center
-          items-center
-          gap-2
+          text-center
+          w-20
+          outline-none
+          border-2
+          rounded
         "
-  >
-    <amber-icon
-      backgroundImageUrl="assets/plus.svg"
-      size="1em"
-    ></amber-icon>
-    <input
-      type="number"
-      min="1"
-      class="
-            text-center
-            w-20
-            outline-none
-            border-2
-            rounded
-          "
-    />
-    <amber-icon
-      backgroundImageUrl="assets/minus.svg"
-      size="1em"
-    ></amber-icon>
-  </div>
+  />
+  <amber-icon
+    backgroundImageUrl="assets/plus.svg"
+    size="1em"
+    (click)="row.increaseAmount(); updateAmount()"
+  ></amber-icon>
+</div>
+<!--Total-->
+<div
+  class="
+    p-1
+    flex
+    justify-center
+    items-center
+    border-b-2
+  "
+>
   <div>
-    {{row.total}}
+    {{row.total}} USD
   </div>
-</ng-container>
+  <amber-icon
+    class="
+      ml-2
+      mb-0.5
+    "
+    backgroundImageUrl="assets/trash.svg"
+    size="1em"
+    *ngIf="confirmState === 'none'"
+    (click)="confirmState = 'confirm'"
+  ></amber-icon>
+  <amber-icon
+    class="
+      ml-2
+      mb-0.5
+    "
+    backgroundImageUrl="assets/close.svg"
+    size="1em"
+    *ngIf="confirmState === 'confirm'"
+    (click)="confirmState = 'none'"
+  ></amber-icon>
+  <amber-icon
+    class="
+      ml-2
+      mb-0.5
+    "
+    backgroundImageUrl="assets/checkmark.svg"
+    size="1em"
+    *ngIf="confirmState === 'confirm'"
+    (click)="confirmState = 'none'; remove()"
+  ></amber-icon>
+</div>
