--- a/frontend-angular-workspace/projects/end-user/src/app/components/item-grid/item-card-row.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/item-grid/item-card-row.component.html
@@ -1,11 +1,12 @@
-<div>{{label}}</div>
+<div
+>{{label}}</div>
 <div
   class="
     font-semibold
     text-red-500
   "
 >
-  {{value}}
+  {{priceDisplay}}
 </div>
 <amber-icon
   *ngIf="icon === 'cart'"
