--- a/frontend-angular-workspace/projects/administration/src/styles.scss
+++ b/frontend-angular-workspace/projects/administration/src/styles.scss
@@ -2,3 +2,24 @@
 //@import "./css/tailwind-components.scss";
 //@import "./css/tailwind-screens.scss";
 //@import "./css/tailwind-utilities.scss";
+
+html {
+  scrollbar-width: none;
+  overflow-x: hidden;
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+html::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
