--- a/frontend-angular-workspace/projects/amber-core/src/lib/components/modal/modal.component.html
+++ b/frontend-angular-workspace/projects/amber-core/src/lib/components/modal/modal.component.html
@@ -27,16 +27,36 @@
       fixed
     "
   >
-    <ng-content></ng-content>
+    <div
+      class="
+        border-4
+        rounded-xl
+        p-4
+        bg-white
+        flex
+        flex-col
+        gap-y-2
+      "
+    >
+      <div
+        class="
+          border-b-4
+          text-xl
+          pb-1
+          font-semibold
+        "
+      >
+        {{title}}
+      </div>
+      <div
+        class="
+          flex
+          flex-col
+          gap-y-4
+        "
+      >
+        <ng-content></ng-content>
+      </div>
+    </div>
   </div>
 </div>
-<!--<div-->
-<!--  style="transform: translate(-50%, -50%)"-->
-<!--  class="-->
-<!--    fixed-->
-<!--    left-1/2-->
-<!--    top-1/2-->
-<!--  "-->
-<!--&gt;-->
-<!--  Make me feel something-->
-<!--</div>-->
